force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ASURite_ID__c</fullName>
        <description>[Peoplesoft] - Student alias; also used for student email account</description>
        <label>ASURITE ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASU_Email__c</fullName>
        <description>[Peoplesoft] - Official ASU email address (usually first name.last name@asu.edu)</description>
        <inlineHelpText>Official ASU directory email address (usually first and last name)</inlineHelpText>
        <label>Directory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASU_Gmail__c</fullName>
        <description>[Peoplesoft] - Email account formatted asurite@asu.edu</description>
        <label>ASU Gmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASU_Online_Student_Count__c</fullName>
        <description>If the Contact has a record in the Student Group = SROD, then populate field</description>
        <label>ASU Online Student Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>SROD</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASU_Online_Student__c</fullName>
        <description>If the ASU Online Student field has a value of 1 or greater, then TRUE</description>
        <formula>IF( ASU_Online_Student_Count__c &gt; 0, TRUE, FALSE)</formula>
        <label>ASU Online Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Standing__c</fullName>
        <description>(PeopleSoft) PS_ACAD_STDNG_ACTN 
JOIN PS_ACAD_STACTN_TBL.DESCR</description>
        <label>Academic Standing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Checklist_Items__c</fullName>
        <description>Count of the number of Checklist Item records where the Checklist Status equals initiated</description>
        <label>Active Checklist Items</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Initiated</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Affiliation_Alumni__c</fullName>
        <description>[Peoplesoft] - Relations with Institution</description>
        <label>Alumni</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Consumer__c</fullName>
        <description>[Peoplesoft] - Relation with Institution</description>
        <label>Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Courtesy_Affiliate__c</fullName>
        <description>[Peoplesoft] - Relation with Institution</description>
        <label>Courtesy Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Employee__c</fullName>
        <description>[Peoplesoft] - Relation with Institution;  Examples include: Current, Previous Relation with Institution</description>
        <label>Employee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Student_Applicant__c</fullName>
        <description>[Peoplesoft] - Relations with Institution; Examples include: Current, Previous Relations with Institution</description>
        <label>Student Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Student__c</fullName>
        <description>[Peoplesoft] - Relations with Institution; Examples include: Current, Previous Relations with Institution</description>
        <label>Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amazon_Echo_Dot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tooker House Amazon Echo Dot Recipient 2017</description>
        <label>Amazon Echo Dot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arizona_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Checkbox which indicates, if selected, that a student is a confirmed Arizona resident for current or upcoming term at ASU.</description>
        <label>Arizona Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Athletic_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Student has been a member of an athletic team.</description>
        <label>Athletic Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use as filter to suppress direct mail from going to contacts with known bad addresses.</description>
        <label>Bad Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bizcard_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizcard Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Bizcard Account)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bizcard_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bizcard Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Building__c</fullName>
        <description>(Data Warehouse) REZ_HOUSING_BOOKING_VW .BOOKING_BUILDING</description>
        <label>Residence Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Campus__c</fullName>
        <description>(Data Warehouse) REZ_HOUSING_BOOKING_VW .BOOKING_CAMPUS</description>
        <label>Room Campus</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Floor_Suite__c</fullName>
        <description>(Data Warehouse) REZ_HOUSING_BOOKING_VW .BOOKING_FLOOR_SUITE</description>
        <label>Room Floor Suite</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Section__c</fullName>
        <description>(Data Warehouse) REZ_HOUSING_BOOKING_VW .BOOKING_SECTION</description>
        <label>Room Section</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <description>(Data warehouse) REZ_HOUSING_BOOKING_VW .BOOKING_STATUS</description>
        <label>Room Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Ineligible_Student_Group_Count__c</fullName>
        <description>[Peoplesoft] - A count of the total Student Group records where Status is True and PeopleSoft Code is CP03. Used to determine if this Contact should be flagged as a currently ineligible College Achievement Plan participant.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is CP03. Used to determine if this Contact should be flagged as a currently ineligible College Achievement Plan participant.</inlineHelpText>
        <label>CAP Ineligible Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>CP03</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CAP_Possible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Checkbox that Indicates possible CAP student</description>
        <inlineHelpText>Indicates possible CAP student</inlineHelpText>
        <label>CAP Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP_Student_Group_Count__c</fullName>
        <description>[Peoplesoft] - A count of the total Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02. Used to determine if this Contact should be flagged as a College Achievement Plan participant.</description>
        <inlineHelpText>A count of the total Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02. Used to determine if this Contact should be flagged as a College Achievement Plan participant.</inlineHelpText>
        <label>CAP Student Group Count</label>
        <summaryFilterItems>
            <field>Student_Group__c.SG_Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Student_Group__c.SG_PeopleSoft_Code__c</field>
            <operation>equals</operation>
            <value>CP00, CP01, CP02</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Group__c.SG_Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <description>[Peoplesoft] - Displays a green icon for a College Achievement Plan participant. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02.</description>
        <formula>IF(CAP_Student_Group_Count__c &gt; 0, 
IMAGE("/resource/CAP_Student_Indicator","CAP Participant",20,20), 
IF(CAP_Ineligible_Student_Group_Count__c &gt; 0, 
IMAGE("/resource/CAP_Student_Indicator_Ineligable","CAP Ineligible",20,20), 
IF(CAP_Possible__c, 
IMAGE("/resource/CAP_Student_Indicator_Potential","CAP Possible",20,20), 
"")))</formula>
        <inlineHelpText>Displays a green icon for a College Achievement Plan participant. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02.</inlineHelpText>
        <label>CAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <description>The most recent change in the student's persistence outlook</description>
        <label>Most Recent Outlook Change Date</label>
        <summarizedField>Persistence_Outlook__c.Change_Date__c</summarizedField>
        <summaryForeignKey>Persistence_Outlook__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Check_In_Dt__c</fullName>
        <description>(Data warehouse) REZ_HOUSING_BOOKING_VW.CHECK_IN_DT</description>
        <label>Room Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Dt__c</fullName>
        <description>(Data warehouse) REZ_HOUSING_BOOKING_VW .CHECK_OUT_DT</description>
        <label>Room Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coach_Preference_Notes__c</fullName>
        <inlineHelpText>Success Coach use. No ADA information (use link to Dropbox).</inlineHelpText>
        <label>Coach Preference Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Permission__c</fullName>
        <description>[Manually entered] - Let's the user know if they can reach out to this contact</description>
        <label>Contact Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feel free to contact</fullName>
                </value>
                <value>
                    <fullName>Contact with prior notice</fullName>
                </value>
                <value>
                    <fullName>Do not contact without permission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <description>[Peoplesoft] - Examples include: Home Phone, Local Phone, Mobile Phone, Email</description>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Local Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Relations_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Salesforce] - Corporate relations Contact Owner</description>
        <label>Corporate Relations Contact Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Relations_Email__c</fullName>
        <description>Email used to manage ASU corporate relationships.</description>
        <inlineHelpText>Email used to manage ASU corporate relationships.</inlineHelpText>
        <label>Corporate Relations Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>[Peoplesoft] - Country of Citizenship</description>
        <label>Country of Citizenship</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (Country of Citizenship)</relationshipLabel>
        <relationshipName>Contacts_Country_of_Citizenship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Curr_Cont_Prediction_Level__c</fullName>
        <description>The persistence outlook prediction level for the student after the most recent change.</description>
        <label>Current Outlook Level</label>
        <summarizedField>Persistence_Outlook__c.Curr_Cont_Prediction_Level__c</summarizedField>
        <summaryForeignKey>Persistence_Outlook__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <description>[PeopleSoft] PS_ASU_D_PERSON_VW. AGE_YEARS</description>
        <label>Current Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currently_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Currently Enrolled Student</description>
        <label>Currently Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Checked when student is deceased.</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defer_Territory_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defer Territory Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Duplicate value in PeopleSoft. XXX'+LAST_NAME,FIRST_NAME+EMPLID = TRUE</description>
        <inlineHelpText>This Contact record is a Duplicate value in PeopleSoft. Please do not use.</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDU_Neighborhood__c</fullName>
        <description>[CollegeBoard] - Geodemographic Tag based socioeconomic data and educationally related information</description>
        <label>EDU Neighborhood</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>[Peoplesoft] - PeopleSoft unique ID</description>
        <externalId>true</externalId>
        <label>EMPLID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EPO_Email__c</fullName>
        <description>[Peoplesoft] - Email address of the destination email after ASUrite has been activated.</description>
        <inlineHelpText>This email address is the forwarding email address the person has chosen to receive ASU email communication.</inlineHelpText>
        <label>Destination Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Change_Date__c</fullName>
        <description>[Peoplesoft] - Date and time of email change</description>
        <inlineHelpText>The date and time the Contact's primary Email was changed. For the reason, see "Email Change Reason".</inlineHelpText>
        <label>Email Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Change_Reason__c</fullName>
        <description>[Peoplesoft] - The reason for a change to the Contact's primary Email address</description>
        <inlineHelpText>The reason for a change to the Contact's primary Email address</inlineHelpText>
        <label>Email Change Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>[Peoplesoft] - Field to capture email status response from BriteVerify. Temp = temporary email address. Role = role-based email address.</description>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>[Peoplesoft] - An individual's reported ethnicity</description>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Am. Indian Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black African-American</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islande</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FERPA_Directory_Hold__c</fullName>
        <description>[Peoplesoft] - Examples include: No Hold, Phone-Address Hold, Full Hold</description>
        <label>FERPA Directory Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Hold</fullName>
                </value>
                <value>
                    <fullName>Phone-Address Hold</fullName>
                </value>
                <value>
                    <fullName>Full Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTFTF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ASU_CENSUS
.CS__STUDENT_TERM_ENROLLMENT 
WHERE ASU_FTPT_CODE        = 'F'
AND ASU_NEW_UG_STATUS_CODE = 'FTF'</description>
        <label>Full Time First Time Freshman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Generation_Student__c</fullName>
        <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
        <description>(PeopleSoft)
PS_ASU_ADM_SAR_TBL WHERE ASU_ADS_QUESTNAME = 'FIRSTGEN' AND SAR.ASU_ADS_TXTRESP IN ('Y', 'YES', 'Yes')
Or
ASU_ADM_APPLICANT.FIRST_GEN_FLG = 'Y'</description>
        <label>First Generation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--</fullName>
                    <default>true</default>
                    <label>--</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>[Peoplesoft] - Examples include: Female, Male, Unknown</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geomarket_Code__c</fullName>
        <description>[Peoplesoft] - Geomarket code tied to the zipcode via a picklist</description>
        <label>Geomarket Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Cluster__c</fullName>
        <description>[CollegeBoard] - Geodemographic Tag for student's high-school community</description>
        <label>HS Cluster</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HashContactID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contains a hash for a students contact ID</description>
        <externalId>true</externalId>
        <label>HashContactID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Help_Desk_Provided_Phone__c</fullName>
        <label>Help Desk Provided Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I20_F1J1_Form_Submission__c</fullName>
        <description>[Peoplesoft] - Date is auto generated upon I-20 webform submission. During manual entry, unmarking the "F1J1 Form Submitted" check box along with clearing the Mailing Option drop-down menu and saving should re-initiate F1CNFM. Upon I-20 submission, F1CNFM checklist item is completed.</description>
        <label>F1J1 Form Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_Financial_Documents_Received__c</fullName>
        <description>[Peoplesoft] - As Financial Documents are received, they are scanned and imported into Application Xtender. From there, data is imported into PeopleSoft and General Materials is updated with receipt information. A job runs to populate the Financial Documents and Financial Doc Date fields with this information.</description>
        <label>Financial Documents Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_Financial_Guarantee_Received__c</fullName>
        <description>[Peoplesoft] - As Financial Guarantees are received, they are scanned and imported into Application Xtender. From there, data is imported into PeopleSoft and General Materials is updated with receipt information. A job runs to populate the Financial Guarantee/Financial Guarantee Date fields with this information.</description>
        <label>Financial Guarantee Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_Generated__c</fullName>
        <description>[Peoplesoft] - In PeopleSoft, a checkbox is manually marked and date is auto-populated once the I-20 has been generated.</description>
        <label>I-20 Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_Mailing_Option__c</fullName>
        <description>[Peoplesoft] - Choice is auto generated upon I-20 webform submission.</description>
        <label>I-20 Mailing Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>US Expedite</fullName>
                </value>
                <value>
                    <fullName>International Expedite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I20_SEVIS_Address_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - search for Sevis Type. If it exists AND it is a non-US address, then the checkbox is populated.</description>
        <label>SEVIS Address Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I20_SEVIS_Received__c</fullName>
        <description>[Peoplesoft] - Date will be auto generated when "SEVIS Transfer Form Rec'd" checkbox is marked. Date will be removed when "SEVIS Transfer Form Rec'd" checkbox is unmarked.</description>
        <label>SEVIS Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_SEVIS_Released__c</fullName>
        <description>[Peoplesoft] - Manual entry used to mark the release date for the SEVIS Transfer form. Helps identify population the transfer form hasn't been released by the release date.</description>
        <inlineHelpText>Release date for the SEVIS transfer form.</inlineHelpText>
        <label>SEVIS Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_SEVIS_Transfer_Form_Required__c</fullName>
        <description>[Peoplesoft] - Transfer 1-20: when SEVIS Transfer Form Req'd=Yes AND SEVIS Transfer Form Rec'd = Blank/Null then Transfer I-20 form is outstanding.</description>
        <label>SEVIS Transfer Form Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I20_Sent__c</fullName>
        <description>[Peoplesoft] - Date will be auto generated when "Student I-20 Sent" checkbox is marked. Date will be removed when "Student I-20 Sent" checkbox is unmarked.</description>
        <inlineHelpText>Date I-20 was sent to the student.</inlineHelpText>
        <label>I-20 Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I20_Tracking_Number__c</fullName>
        <description>[Peoplesoft] - Manually entered once I-20 has been mailed.</description>
        <label>Tracking Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Duplicate_Record__c</fullName>
        <description>Field used for the Identity Management team to merge duplicate Contact records. Can use in conjunction with DemandTools matching scenarios. JIRA Ticket number (PSDUP) to track PeopleSoft duplicate process approval.</description>
        <inlineHelpText>JIRA Ticket (PSDUP) number to track PeopleSoft duplicate process approval.</inlineHelpText>
        <label>IM Duplicate Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_at_Home__c</fullName>
        <description>[???] - Information received from the TOEFL test submission</description>
        <label>Language Spoken at Home</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bambara</fullName>
                </value>
                <value>
                    <fullName>Bashkir</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bemba</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bikol</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chuvash</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Dyula</fullName>
                </value>
                <value>
                    <fullName>Efik</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Case_Email_Used__c</fullName>
        <description>[Salesforce] - Last email used by the contact</description>
        <inlineHelpText>The email this Contact last used when sending a message to an ASU address that is processed by Salesforce.</inlineHelpText>
        <label>Last Case Email Used</label>
        <type>Email</type>
    </fields>
</CustomObject>